[package]
name = "uuidecho"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["cargo"] }
ring = "0.17.8"
uuid = { version = "1.8.0", features = ["v5"]}
data-encoding = "2.6.0"
chrono = "0.4.38"
